--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#242F3E</color>
+    <color name="colorPrimaryDark">#1A212C</color>
+    <color name="colorAccent">#E1F2F4</color>
+
+    <color name="colorGray1">#606A76</color>
 </resources>
