--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,68 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-            name="viewModel"
-            type="sbis.faceinfo.presentation.search.contracts.SearchViewModelContract" />
+                name="viewModel"
+                type="sbis.faceinfo.presentation.search.contracts.SearchViewModelContract"/>
 
     </data>
 
     <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
 
         <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:background="#1A212C"
-                app:layout_scrollFlags="scroll|enterAlways|snap">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="12dp"
+                    android:background="#1A212C"
+                    app:layout_scrollFlags="scroll|enterAlways|snap">
 
                 <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/ic_search_black_36dp"
-                    tools:ignore="ContentDescription" />
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:src="@drawable/ic_search_black_36dp"
+                        tools:ignore="ContentDescription"/>
 
                 <EditText
-                    android:id="@+id/etxt_search_request"
-                    android:textColor="#F2F2F2"
-                    android:textColorHint="#83909D"
-                    android:maxLines="1"
-                    android:hint="Фамилия Имя"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:inputType="text" />
+                        android:id="@+id/etxt_search_request"
+                        android:textColor="#F2F2F2"
+                        android:textColorHint="#83909D"
+                        android:maxLines="1"
+                        android:hint="Фамилия Имя"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:inputType="text"/>
 
                 <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/ic_clear_black_36dp"
-                    tools:ignore="ContentDescription" />
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:src="@drawable/ic_clear_black_36dp"
+                        tools:ignore="ContentDescription"/>
 
             </LinearLayout>
 
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_search_result"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/item_search_person"
-            tools:itemCount="4" />
+                android:id="@+id/rv_search_result"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_search_person"
+                tools:itemCount="4"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
