--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
     <android.support.design.widget.CoordinatorLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.AppBarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fitsSystemWindows="true"
-                android:background="@color/colorPrimaryDark">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:fitsSystemWindows="true">
 
+            <!--app:expandedTitleMarginEnd="10dp"-->
+            <!--app:expandedTitleMarginStart="1dp"-->
             <android.support.design.widget.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <ImageView
+                    android:id="@+id/img_user_profile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
-                    app:contentScrim="?attr/colorPrimary"
-                    app:expandedTitleMarginEnd="64dp"
-                    app:expandedTitleMarginStart="48dp"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-                <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fitsSystemWindows="true"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_launcher_foreground"
-                        app:layout_collapseMode="parallax"/>
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    tools:ignore="ContentDescription"
+                    tools:src="@drawable/ic_launcher_foreground" />
 
                 <!--<TextView-->
                 <!--android:layout_width="match_parent"-->
@@ -49,37 +51,73 @@
             </android.support.design.widget.CollapsingToolbarLayout>
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_gravity="bottom"
-                    android:gravity="center"
-                    android:text="Test App"
-                    android:textColor="@android:color/white"
-                    android:textSize="36dp"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                android:id="@+id/txt_user_name"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="36sp"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                tools:text="Test App" />
 
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                android:orientation="vertical">
 
-            <com.neo.arcchartview.ArcChartView
+                <TextView
+                    android:id="@+id/txt_states"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="bottom"
+                    android:gravity="center"
+                    android:text="Статистика пользователя:"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+                <include layout="@layout/item_divider" />
+
+                <com.neo.arcchartview.ArcChartView
                     android:id="@+id/person_statistics"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:acv_lines_count="10"
-                    app:acv_lines_width="6dp"
-                    app:acv_lines_space="2dp"
-                    app:acv_sections_count="8"
-                    app:acv_sections_space="2dp"
-                    app:acv_icon_size="32dp"
-                    app:acv_mid_start_extra_offset="10dp"
                     app:acv_allow_animations_on_set_values="false"
-                    app:acv_allow_setting_value_by_touch="false"/>
+                    app:acv_allow_setting_value_by_touch="false"
+                    app:acv_icon_size="32dp"
+                    app:acv_lines_count="10"
+                    app:acv_lines_space="2dp"
+                    app:acv_lines_width="6dp"
+                    app:acv_mid_start_extra_offset="10dp"
+                    app:acv_sections_count="8"
+                    app:acv_sections_space="2dp" />
+
+                <include layout="@layout/item_divider" />
+
+                <TextView
+                    android:id="@+id/txt_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="bottom"
+                    android:gravity="center"
+                    android:text="Расшифровка:"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+            </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
