Create: create new module 'DetailInfo'

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="sbis.faceinfo.presentation.search.contracts.SearchViewModelContract" />
+            type="sbis.faceinfo.presentation.search.contracts.SearchVmContract.ViewModel" />
 
     </data>
 
