--- a/app/src/main/res/layout/item_search_person.xml
+++ b/app/src/main/res/layout/item_search_person.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="sbis.data.model.PersonSearch" />
+            type="sbis.data.model.presentation.PersonSearch" />
 
     </data>
 
