--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,6 +14,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
         android:background="@color/colorPrimary">
 
         <android.support.design.widget.AppBarLayout
@@ -67,6 +68,13 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:itemCount="4"
             tools:listitem="@layout/item_search_person" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="?attr/actionBarSize" />
 
     </android.support.design.widget.CoordinatorLayout>
 
