--- a/app/src/main/res/values/attrs_custom.xml
+++ b/app/src/main/res/values/attrs_custom.xml
@@ -9,4 +9,37 @@
         <attr name="finalHeight" format="dimension"/>
     </declare-styleable>
 
+    <declare-styleable name="Sushi">
+        <attr name="sushi_barHeight" format="dimension" />
+        <attr name="sushi_displayMinMax" format="boolean" />
+        <attr name="sushi_backgroundColor" format="color" />
+        <attr name="sushi_foregroundColor" format="color" />
+        <attr name="sushi_bubbleTextSize" format="dimension" />
+        <attr name="sushi_textSize" format="dimension" />
+    </declare-styleable>
+
+    <declare-styleable name="Slidr">
+        <attr name="slidr_barHeight" format="dimension" />
+        <attr name="slidr_textTop_visible" format="boolean" />
+        <attr name="slidr_textTop_size" format="dimension" />
+        <attr name="slidr_textBottom_visible" format="boolean" />
+        <attr name="slidr_textBottom_size" format="dimension" />
+        <attr name="slidr_backgroundColor" format="color" />
+
+        <attr name="slidr_step_colorizeAfterLast" format="boolean" />
+        <attr name="slidr_step_drawLine" format="boolean" />
+        <attr name="slidr_step_colorizeOnlyBeforeIndicator" format="boolean" />
+
+        <attr name="slidr_draw_bubble" format="boolean" />
+
+        <attr name="slidr_regions" format="boolean" />
+        <attr name="slidr_regions_centerText" format="boolean" />
+        <attr name="slidr_regions_textFollowRegionColor" format="boolean" />
+        <attr name="slidr_region_leftColor" format="color" />
+        <attr name="slidr_region_rightColor" format="color" />
+
+        <attr name="slidr_indicator_inside" format="boolean" />
+        <attr name="slidr_edditable" format="boolean" />
+    </declare-styleable>
+
 </resources>
