--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="sbis.faceinfo.presentation.detailinfo.contracts.DetailInfoVmContract.ViewModel" />
+
     </data>
 
     <android.support.design.widget.CoordinatorLayout
@@ -50,6 +54,7 @@
                         android:layout_marginTop="30dp"
                         android:layout_marginBottom="10dp"
                         android:gravity="bottom|center"
+                        android:text="@{viewModel.user.fullName}"
                         android:textColor="@android:color/white"
                         android:textSize="30sp"
                         tools:background="@android:color/holo_blue_light"
@@ -72,42 +77,12 @@
             app:behavior_overlapTop="@dimen/detail_content_space_top"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_param_items"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/txt_states"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_gravity="bottom"
-                    android:gravity="center"
-                    android:text="Статистика пользователя:"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    app:layout_collapseMode="pin" />
-
-                <include layout="@layout/item_divider" />
-
-                <TextView
-                    android:id="@+id/txt_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_gravity="bottom"
-                    android:gravity="center"
-                    android:text="Расшифровка:"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    app:layout_collapseMode="pin" />
-
-                <com.github.florent37.androidslidr.Slidr
-                    android:layout_width="match_parent"
-                    android:layout_height="24dp"
-                    app:slidr_regions_centerText="false"
-                    app:slidr_region_leftColor="#4CAF50" />
-
-            </LinearLayout>
+                tools:itemCount="5"
+                tools:listitem="@layout/item_person_param" />
 
         </android.support.v4.widget.NestedScrollView>
 
@@ -133,6 +108,7 @@
                     android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:maxLines="1"
+                    android:text="@{viewModel.user.fullName}"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
                     tools:text="Петров Семен" />
