Start redesign App

--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -15,8 +15,8 @@
             android:gravity="center"
             android:hint="@string/server_url_hint"
             android:inputType="text"
-            android:textColor="@color/colorAccent"
-            android:textColorHint="@color/colorGray1"
+            android:textColor="@color/colorTextPrimary"
+            android:textColorHint="@color/colorTextSecondary"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Пример: 10.86.43.21:7070"
-            android:textColor="@color/colorGray1"
+            android:textColor="@color/colorTextSecondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etxt_server_url" />
