--- a/app/src/main/res/layout/item_person_param.xml
+++ b/app/src/main/res/layout/item_person_param.xml
@@ -14,35 +14,39 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@android:color/white"
         android:gravity="top"
         android:orientation="horizontal"
         android:padding="12dp"
         android:weightSum="1">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.4"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingTop="4dp"
-            android:text="@{viewModel.title}"
-            android:textColor="@color/colorAccent"
-            android:textSize="18sp"
-            tools:text="Смиренность" />
+        <sbis.helpers.view.circle.CustomCircle
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
 
-        <sbis.helpers.view.seekbar.Sushi
-            android:id="@+id/sb_param"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.6"
-            app:sushi_backgroundColor="@color/colorPrimaryDark"
-            app:sushi_barHeight="20dp"
-            app:sushi_bubbleTextSize="14dp"
-            app:sushi_displayMinMax="false"
-            app:sushi_foregroundColor="#4CAF50"
-            app:sushi_textSize="12dp" />
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.4"-->
+            <!--android:ellipsize="end"-->
+            <!--android:maxLines="1"-->
+            <!--android:paddingTop="4dp"-->
+            <!--android:text="@{viewModel.title}"-->
+            <!--android:textColor="@color/colorAccent"-->
+            <!--android:textSize="18sp"-->
+            <!--tools:text="Смиренность" />-->
+
+        <!--<sbis.helpers.view.seekbar.Sushi-->
+            <!--android:id="@+id/sb_param"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.6"-->
+            <!--app:sushi_backgroundColor="@color/colorPrimaryDark"-->
+            <!--app:sushi_barHeight="20dp"-->
+            <!--app:sushi_bubbleTextSize="14dp"-->
+            <!--app:sushi_displayMinMax="false"-->
+            <!--app:sushi_foregroundColor="#4CAF50"-->
+            <!--app:sushi_textSize="12dp" />-->
 
     </LinearLayout>
 
