--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,11 +5,9 @@
 
     <data>
 
-        <import
-            type="android.view.View" />
+        <import type="android.view.View" />
 
-        <import
-            type="sbis.faceinfo.presentation.search.contracts.SearchVmContract.ViewModel.State" />
+        <import type="sbis.faceinfo.presentation.search.contracts.SearchVmContract.ViewModel.State" />
 
         <variable
             name="viewModel"
@@ -25,12 +23,14 @@
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            app:elevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#1A212C"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimaryDark"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingStart="12dp"
@@ -38,12 +38,12 @@
                 app:layout_scrollFlags="scroll|enterAlways|snap">
 
                 <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/ic_search_black_36dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_search"
                     tools:ignore="ContentDescription" />
 
-                <EditText
+                <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/etxt_search_request"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -51,8 +51,9 @@
                     android:hint="Фамилия Имя"
                     android:inputType="text"
                     android:maxLines="1"
-                    android:textColor="#F2F2F2"
-                    android:textColorHint="#83909D" />
+                    android:textColor="@color/colorTextPrimary"
+                    android:textColorHint="@color/colorTextSecondary"
+                    app:backgroundTint="@color/colorPrimary" />
 
                 <ImageView
                     android:id="@+id/btn_clear"
@@ -60,10 +61,17 @@
                     android:layout_height="36dp"
                     android:clickable="true"
                     android:focusable="true"
-                    android:src="@drawable/ic_clear_black_36dp"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:padding="6dp"
+                    android:src="@drawable/ic_close"
                     tools:ignore="ContentDescription" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorAppBarDivider"/>
 
         </android.support.design.widget.AppBarLayout>
 
@@ -71,9 +79,9 @@
             android:id="@+id/rv_search_result"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="@{viewModel.state != State.LOADING ? View.VISIBLE : View.INVISIBLE}"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:itemCount="4"
-            android:visibility="@{viewModel.state != State.LOADING ? View.VISIBLE : View.INVISIBLE}"
             tools:listitem="@layout/item_search_person" />
 
         <ProgressBar
@@ -81,8 +89,8 @@
             android:layout_width="@dimen/progress_bar_size"
             android:layout_height="@dimen/progress_bar_size"
             android:layout_gravity="center_horizontal"
-            android:visibility="@{viewModel.state == State.LOADING ? View.VISIBLE : View.INVISIBLE}"
-            android:layout_marginTop="?attr/actionBarSize" />
+            android:layout_marginTop="?attr/actionBarSize"
+            android:visibility="@{viewModel.state == State.LOADING ? View.VISIBLE : View.INVISIBLE}" />
 
     </android.support.design.widget.CoordinatorLayout>
 
