--- a/app/src/main/res/layout/item_search_person.xml
+++ b/app/src/main/res/layout/item_search_person.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,53 +13,55 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="66dp"
+        android:layout_height="68dp"
+        android:background="@color/colorPrimary"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
         android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:background="@color/colorPrimary">
+        android:paddingEnd="12dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_photo"
             user_photo="@{viewModel.photoUrl}"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            app:civ_border_color="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:civ_border_width="1dp"
             tools:src="@drawable/ic_launcher_foreground" />
 
         <TextView
             android:id="@+id/txt_user_name"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:ellipsize="end"
             android:gravity="center_vertical"
-            android:lines="1"
-            android:textColor="@color/colorAccent"
-            android:textSize="18sp"
+            android:maxLines="1"
             android:text='@{viewModel.secondName + " " + viewModel.name}'
+            android:textColor="@color/colorTextPrimary"
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/txt_user_post"
-            app:layout_constraintStart_toEndOf="@+id/user_photo"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/user_photo"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@tools:sample/full_names"
-            app:layout_constraintVertical_chainStyle="spread_inside" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="@tools:sample/full_names" />
 
         <TextView
             android:id="@+id/txt_user_post"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:ellipsize="end"
             android:gravity="center_vertical"
-            android:textColor="@color/colorGray1"
-            android:textSize="14sp"
+            android:maxLines="1"
             android:text='@{viewModel.postName}'
+            android:textColor="@color/colorTextSecondary"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/user_photo"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/user_photo"
             app:layout_constraintTop_toBottomOf="@+id/txt_user_name"
             tools:text="@tools:sample/cities" />
 
