--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -19,13 +19,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimaryBackground">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimaryBackground"
             app:elevation="0dp">
 
             <android.support.design.widget.CollapsingToolbarLayout
@@ -46,7 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:background="@color/colorPrimaryDark"
+                    android:background="@color/colorPrimaryBackground"
                     android:orientation="vertical"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.1">
@@ -135,7 +135,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:layout_width="36dp"
                     tools:layout_height="36dp"
-                    tools:background="@color/colorPrimaryDark" />
+                    tools:background="@color/colorPrimaryBackground" />
 
                 <android.support.constraint.Guideline
                     android:id="@+id/guideline_end"
@@ -163,7 +163,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimaryBackground"
             android:visibility="@{viewModel.state == State.LOADING ? View.VISIBLE : View.GONE}"
             tools:visibility="gone">
 
