--- a/app/src/main/res/layout/item_person_param.xml
+++ b/app/src/main/res/layout/item_person_param.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -13,40 +12,41 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:background="@android:color/white"
-        android:gravity="top"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="12dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:weightSum="1">
 
+        <!--todo: bindingAdapter set icons-->
+        <ImageView
+            android:id="@+id/img_category"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_weight="0.15"
+            tools:src="@drawable/ic_close" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.65"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingStart="4dp"
+            android:paddingTop="4dp"
+            android:text="@{viewModel.title}"
+            android:textColor="@color/colorTextPrimary"
+            android:textSize="20sp"
+            tools:ignore="RtlSymmetry"
+            tools:text="Смиренность" />
+
         <sbis.helpers.view.circle.CustomCircle
-            android:layout_width="100dp"
-            android:layout_height="100dp" />
-
-        <!--<TextView-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="0.4"-->
-            <!--android:ellipsize="end"-->
-            <!--android:maxLines="1"-->
-            <!--android:paddingTop="4dp"-->
-            <!--android:text="@{viewModel.title}"-->
-            <!--android:textColor="@color/colorAccent"-->
-            <!--android:textSize="18sp"-->
-            <!--tools:text="Смиренность" />-->
-
-        <!--<sbis.helpers.view.seekbar.Sushi-->
-            <!--android:id="@+id/sb_param"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="0.6"-->
-            <!--app:sushi_backgroundColor="@color/colorPrimaryDark"-->
-            <!--app:sushi_barHeight="20dp"-->
-            <!--app:sushi_bubbleTextSize="14dp"-->
-            <!--app:sushi_displayMinMax="false"-->
-            <!--app:sushi_foregroundColor="#4CAF50"-->
-            <!--app:sushi_textSize="12dp" />-->
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            cc_setup="@{viewModel}"
+            android:layout_weight="0.2" />
 
     </LinearLayout>
 
