--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#B9B9B9</color>
 
+    <color name="colorCardBackground">#F9F9F9</color>
+
     <color name="colorTextPrimary">#000000</color>
     <color name="colorTextSecondary">@color/colorAccent</color>
 
