--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -25,8 +25,8 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryBackground"
-            app:elevation="0dp">
+            android:background="@color/colorCardBackground"
+            android:elevation="4dp">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/collapsing"
@@ -46,24 +46,43 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:background="@color/colorPrimaryBackground"
+                    android:background="@color/colorCardBackground"
                     android:orientation="vertical"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.1">
 
-                    <TextView
-                        android:id="@+id/txt_user_name_title"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
                         android:layout_marginTop="30dp"
                         android:layout_marginBottom="10dp"
-                        android:gravity="bottom|center"
-                        android:text="@{viewModel.user.fullName}"
-                        android:textColor="@android:color/white"
-                        android:textSize="30sp"
-                        tools:background="@android:color/holo_blue_light"
-                        tools:text="Петров Семен" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/txt_user_name_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:gravity="bottom|center"
+                            android:text='@{viewModel.userSecondName + " " + viewModel.userName}'
+                            android:textColor="@color/colorTextPrimary"
+                            android:textSize="24sp"
+                            tools:background="@android:color/holo_blue_light"
+                            tools:text="Кузнецова Анна" />
+
+                        <TextView
+                            android:id="@+id/txt_user_post_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:gravity="bottom|center"
+                            android:text='@{viewModel.userPostName}'
+                            android:textColor="@color/colorTextSecondary"
+                            android:textSize="18sp"
+                            tools:background="@android:color/holo_orange_light"
+                            tools:text="Тех. поддержка" />
+
+                    </LinearLayout>
 
                 </FrameLayout>
 
@@ -82,97 +101,93 @@
             app:behavior_overlapTop="@dimen/detail_content_space_top"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_param_items"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:itemCount="5"
-                tools:listitem="@layout/item_person_param" />
+                android:paddingBottom="20dp"
+                tools:visibility="visible">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="10dp"
+                        android:background="@drawable/shadow" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_run_man"
+                        android:drawablePadding="8dp"
+                        android:ellipsize="end"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:padding="12sp"
+                        android:text="@string/oftenLeaving"
+                        android:textColor="@color/colorTextSecondary"
+                        android:textSize="16sp"
+                        android:visibility="@{viewModel.state != State.LOADING &amp;&amp; viewModel.userParams.oftenLeaving ? View.VISIBLE : View.GONE}" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_param_items"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="@{viewModel.state != State.LOADING ? View.VISIBLE : View.INVISIBLE}"
+                        tools:itemCount="2"
+                        tools:listitem="@layout/item_person_param" />
+
+                </LinearLayout>
+
+                <ProgressBar
+                    android:layout_width="@dimen/progress_bar_size"
+                    android:layout_height="@dimen/progress_bar_size"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:visibility="@{viewModel.state == State.LOADING ? View.VISIBLE : View.GONE}" />
+
+            </FrameLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_user_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:elevation="0dp"
+            android:layout_height="@dimen/toolbar_final_height"
+            android:paddingStart="@dimen/custom_toolbar_padding_start"
             app:layout_anchor="@+id/title_custom"
-            tools:background="@android:color/holo_green_light">
+            tools:background="@android:color/holo_green_light"
+            tools:ignore="RtlSymmetry">
 
-            <android.support.constraint.ConstraintLayout
+            <TextView
+                android:id="@+id/txt_user_name"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/toolbar_final_height"
-                android:paddingStart="@dimen/custom_toolbar_padding_start"
-                tools:ignore="RtlSymmetry">
-
-                <TextView
-                    android:id="@+id/txt_user_name"
-                    android:layout_width="0dp"
-                    app:layout_constraintWidth_default="wrap"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:gravity="center_vertical"
-                    android:maxLines="1"
-                    android:text="@{viewModel.user.fullName}"
-                    android:textColor="@android:color/white"
-                    android:textSize="20sp"
-                    app:layout_goneMarginStart="0dp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Петров Семен" />
-
-                <ImageView
-                    android:id="@+id/img_smoke"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    smoke_img="@{viewModel.user.isSmoke}"
-                    android:layout_marginStart="12dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/txt_user_name"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_width="36dp"
-                    tools:layout_height="36dp"
-                    tools:background="@color/colorPrimaryBackground" />
-
-                <android.support.constraint.Guideline
-                    android:id="@+id/guideline_end"
-                    android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.85"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </android.support.constraint.ConstraintLayout>
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text='@{viewModel.userSecondName + " " + viewModel.userName}'
+                android:textColor="@color/colorTextPrimary"
+                android:textSize="20sp"
+                tools:text="Петров Семен" />
 
         </android.support.v7.widget.Toolbar>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_user_profile"
-            user_photo="@{viewModel.user.photoUrl}"
+            user_photo="@{viewModel.userPhotoUrl}"
             android:layout_width="@dimen/image_circle_start_size"
             android:layout_height="@dimen/image_circle_start_size"
             android:layout_gravity="center_horizontal"
+            android:elevation="8dp"
             app:civ_border_color="#FFFFFF"
             app:civ_border_width="2dp"
             app:finalHeight="@dimen/image_circle_final_size"
             app:layout_behavior="sbis.helpers.view.behavior.AvatarImageBehavior"
-            tools:src="@drawable/ic_launcher_foreground" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimaryBackground"
-            android:visibility="@{viewModel.state == State.LOADING ? View.VISIBLE : View.GONE}"
-            tools:visibility="gone">
-
-            <ProgressBar
-                android:layout_width="@dimen/progress_bar_size"
-                android:layout_height="@dimen/progress_bar_size"
-                android:layout_gravity="center" />
-
-        </FrameLayout>
+            tools:src="@drawable/user_stub" />
 
     </android.support.design.widget.CoordinatorLayout>
 
