--- a/app/src/main/res/layout/item_person_param.xml
+++ b/app/src/main/res/layout/item_person_param.xml
@@ -13,19 +13,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="68dp"
+        android:layout_margin="4dp"
         android:background="@android:color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_margin="4dp"
         android:weightSum="1">
 
-        <!--todo: bindingAdapter set icons-->
         <ImageView
             android:id="@+id/img_category"
+            img_selector="@{viewModel.param}"
             android:layout_width="0dp"
-            android:layout_height="36dp"
+            android:layout_height="40dp"
             android:layout_weight="0.15"
-            tools:src="@drawable/ic_close" />
+            tools:src="@drawable/ic_responsible" />
 
         <TextView
             android:layout_width="0dp"
@@ -35,7 +35,7 @@
             android:maxLines="1"
             android:paddingStart="4dp"
             android:paddingTop="4dp"
-            android:text="@{viewModel.title}"
+            android:text="@{viewModel.param.title}"
             android:textColor="@color/colorTextPrimary"
             android:textSize="22sp"
             tools:ignore="RtlSymmetry"
