--- a/app/src/main/res/layout/item_search_person.xml
+++ b/app/src/main/res/layout/item_search_person.xml
@@ -28,7 +28,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_launcher_foreground" />
+            tools:src="@drawable/user_stub" />
 
         <TextView
             android:id="@+id/txt_user_name"
