--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="DetailInfoTheme" parent="AppTheme">
+        <item name="android:statusBarColor">@color/colorCardBackground</item>
+    </style>
+
 </resources>
