--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/colorPrimaryBackground"/>
-
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@mipmap/ic_start_logo"/>
-    </item>
+    <!-- todo: Create Drawable for Splash Screen -->
+    <!-- Drawable - backgroundColor, and Item with Logo bitmap -->
 
 </layer-list>
